--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,11 @@
     <string name="crop_name">Enter Crop Name</string>
     <string name="date">Select Date</string>
     <string name="select_service">Select Service</string>
+    <string name="id">Id</string>
+    <string name="machine">Machine</string>
+    <string name="crop">Crop</string>
+    <string name="selected_date">Date</string>
+    <string name="status">Status</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
