--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,9 @@
     <string name="crop">Crop</string>
     <string name="selected_date">Date</string>
     <string name="status">Status</string>
+    <string name="hours">Enter Hours</string>
+    <string name="recents">Recents</string>
+    <string name="booking">Booking</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -51,11 +54,5 @@
     <string name="any_questions">You have any questions or need additional information ?</string>
     <string name="textview">TextView</string>
 
-
-    <string-array name="services">
-        <item>Drone Sprayer</item>
-        <item>Harvester</item>
-        <item>Thresher</item>
-    </string-array>
 
 </resources>
