--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,19 @@
     <string name="hours">Enter Hours</string>
     <string name="recents">Recents</string>
     <string name="booking">Booking</string>
+    <string name="textview">TextView</string>
+    <string name="price">Price</string>
+    <string name="purchase_date">Purchase Date</string>
+    <string name="show_details">Show Details</string>
+    <string name="pin">Pincode</string>
+    <string name="person_name">Jack Ryan</string>
+    <string name="person_email">jackryan@gmail.com</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="my_account">My Account</string>
+    <string name="feedback">Feedback</string>
+    <string name="about_us">About Us</string>
+    <string name="support">24/7 Support</string>
+    <string name="version">Version 1.0</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -52,20 +65,5 @@
     <string name="mail">agrihelp@gmail.com</string>
     <string name="tall_free_number"> +91 9408482488</string>
     <string name="any_questions">You have any questions or need additional information ?</string>
-    <string name="textview">TextView</string>
-    <string name="price">Price</string>
-    <string name="purchase_date">Purchase Date</string>
-    <string name="show_details">Show Details</string>
-    <string name="pin">Pincode</string>
 
-    <string-array name="planets_array">
-        <item>Mercury</item>
-        <item>Venus</item>
-        <item>Earth</item>
-        <item>Mars</item>
-        <item>Jupiter</item>
-        <item>Saturn</item>
-        <item>Uranus</item>
-        <item>Neptune</item>
-    </string-array>
 </resources>
