--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,12 +44,12 @@
     <string name="purchase_date">Purchase Date</string>
     <string name="show_details">Show Details</string>
     <string name="pin">Pincode</string>
-    <string name="person_name">Jack Ryan</string>
-    <string name="person_email">jackryan@gmail.com</string>
+    <string name="person_name">Alpesh Dholariya</string>
+    <string name="person_email">dholariyaalpesh@gmail.com</string>
     <string name="edit_profile">Edit Profile</string>
     <string name="my_account">My Account</string>
     <string name="feedback">Feedback</string>
-    <string name="about_us">About Us</string>
+    <string name="about_agrihelp">About Agrihelp</string>
     <string name="support">24/7 Support</string>
     <string name="version">Version 1.0</string>
 
@@ -65,5 +65,9 @@
     <string name="mail">agrihelp@gmail.com</string>
     <string name="tall_free_number"> +91 9408482488</string>
     <string name="any_questions">You have any questions or need additional information ?</string>
+    <string name="agrihelp">Agrihelp</string>
+    <string name="platforms">Published by Agrihelp Platforms Ltd.</string>
+    <string name="privacy_policy">Privacy Policy</string>
+    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
 
 </resources>
