Profile Fragment Complete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,8 +58,8 @@
     <string name="show_details">Show Details</string>
     <string name="pin">Pincode</string>
     <string name="get_started">Get Started</string>
-    <string name="platforms">Platforms</string>
-    <string name="about">About Us</string>
+    <string name="platforms">Published by Agrihelp Platforms Ltd. </string>
+    <string name="about">Our company is a online booking system that is here to help farmers by giving service 24/7. Here Farmers can book Machinery on Rent. There are 3 services Drone Sprayer, Harvester and Thresher.</string>
     <string name="version">Version 1.0</string>
     <string name="about_agrihelp">About Agrihelp</string>
     <string name="person_email">abc@gmail.com</string>
